deployments/apps/soh-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saleor-frontend-http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: soh-stage.simpleonlinehealthcare.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: saleor-frontend-stage
            port:
              number: 80
